--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.0
+matplotlib==3.8.4
+seaborn==0.13.2
 
+# Optional but recommended for clinical DS workflows
+scipy==1.12.0
+
+# If you later add SHAP or XGBoost:
+# shap==0.44.1
+# xgboost==2.0.3
